fixed the header spacing

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-	font-family: arial;
+	font-family: Open Sans, Helvetica Neue, Arial;
 }
 
 body{
@@ -7,13 +7,13 @@ body{
 }
 
 .logo {
-	margin: 30px 0px 0px 20px;
+	margin: 1vh 0px 0px 20px;
 	width: 200px;
 	height: 70px;
 }
 
 .search-bar{
-	margin: 50px 0px 0px 130px; 
+	margin: 3vh 0px 0px 130px; 
 	width: 100%;
 	position: relative;
 }
@@ -106,6 +106,7 @@ button.active-filter{
 	grid-template-columns: 10vw 30vw 30vw;
 }
 .restaurant-item .title{
+	font-weight: bold;
 	grid-column: 1 / 3;
 	grid-row: 1;
 
